# polyfmt-rs

./: Cargo.toml  README.md  TODO.md
src/: json.rs  lib.rs  macros.rs  plain.rs  pretty.rs  silent.rs  spinner.rs  tree.rs  tui.rs
tests/: tests.rs
