[package]
name = "polyfmt"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.0.4"
erased-serde = "0.3.28"
indicatif = "0.17.5"
lazy_static = "1.4.0"
once_cell = "1.18.0"
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25.0", features = ["derive"] }
termion = "3.0.0"

[dev-dependencies]
similar-asserts = "1.5.0"
