[package]
name = "polyfmt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tui = []

[dependencies]
anyhow = "1.0.79"
colored = "2.0.4"
erased-serde = "0.3.28"
indicatif = "0.17.5"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25.0", features = ["derive"] }
termion = "3.0.0"

[dev-dependencies]
rstest = "0.18.2"
similar-asserts = "1.5.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
